--- a/wiki/videos/tool-demo-2.htm
+++ b/wiki/videos/tool-demo-2.htm
@@ -4,7 +4,7 @@
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="application/x-shockwave-flash">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>tool-demo</title>
 <script src="standard.js" type="text/javascript"></script>
 </head>
